if (IOT_BUILD_TESTS)
    add_subdirectory(folder_name/project_name)
    return()
endif()

file(GLOB afr_modules_abstractions "${AFR_MODULES_DIR}/abstractions/*")
foreach(module IN LISTS afr_modules_csdk afr_modules_freertos_plus afr_modules_abstractions)
    if(IS_DIRECTORY "${module}" AND EXISTS "${module}/CMakeLists.txt")
        afr_add_subdirectory("${module}")
    endif()
endforeach()
